--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,1 +1,38 @@
-<h1>hello!!! if you see this is beacause is working!!!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <% include ../partials/header.ejs %>
+</head>
+
+<body>
+
+  <% include ../partials/nav.ejs %>
+
+<div class="jumbotron text-center">
+  <div class="container">
+    <a href="#" class="metallica-image">
+      
+
+    </a>
+    <h1>RockTC</h1>
+
+    <p>Rock!</p>
+    <a type="button" class="btn btn-lg btn-default" href="#"><span class="glyphicon glyphicon-flash"></span> Getting Started with Radio</a>
+    <a type="button" class="btn btn-lg btn-primary" href="#"><span class="glyphicon glyphicon-flash"></span> Source</a>
+  </div>
+</div>
+<div class="container">
+  <div class="alert alert-info text-center" role="alert">
+    To deploy your own app  <a href="#" class="alert-link">Getting Started RockTC</a> tutorial.
+  </div>
+  <hr>
+
+   <div class="alert alert-info text-center" role="alert">
+
+     Footer
+  </div>
+</div>
+
+
+</body>
+</html>
