--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,20 +3,25 @@
 /* =================================== */
 
 body {
-    background-color: #fff;
+    background-color:black;
     font-family: 'Open Sans', sans-serif;
     line-height: 24px;
     font-size: 16px;
     color: #818181;
 }
 
+/*=================================================================
+	Radio Icons
+==================================================================*/
 
 .service-icon {
+
+
     border: 3px solid transparent;
     display: inline-block;
-    height: 85px;
-    width: 85px;
-    line-height: 101px;
+    height: 115px;
+    width: 115px;
+    line-height: 151px;
 
     -webkit-transform: rotate(47deg);
        -moz-transform: rotate(47deg);
