--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -37,7 +37,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn">
 							<div class="service-item">
 								<div class="service-icon">
-									<i class="fa fa-html5 fa-3x"></i>
+									<i class="fa fa-play-circle fa-4x"></i>
 								</div>
 								<h3>Radio1</h3>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -47,7 +47,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn" data-wow-delay="0.3s">
 							<div class="service-item">
 								<div class="service-icon">
-									<i class="fa fa-css3 fa-3x"></i>
+									<i class="fa fa-play-circle fa-4x"></i>
 								</div>
 								<h3>Radio2</h3>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -57,7 +57,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn" data-wow-delay="0.6s">
 							<div class="service-item">
 								<div class="service-icon">
-									<i class="fa fa-clock-o fa-3x"></i>
+									<i class="fa fa-play-circle fa-4x"></i>
 								</div>
 								<h3>Radio3</h3>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
@@ -67,7 +67,7 @@
 						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn" data-wow-delay="0.9s">
 							<div class="service-item">
 								<div class="service-icon">
-									<i class="fa fa-heart fa-3x"></i>
+									<i class="fa fa-play-circle fa-4x"></i>
 								</div>
 
 								<h3>Radio4</h3>
