add body in body.ejs

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -15,8 +15,6 @@ body {
 ==================================================================*/
 
 .service-icon {
-
-
     border: 3px solid transparent;
     display: inline-block;
     height: 115px;
@@ -39,6 +37,7 @@ body {
 .service-item:hover .service-icon {
     border: 3px solid #009ee3;
     margin-bottom: 20px;
+    margin-top: 20px;
     color: #009ee3;
 }
 
