--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,76 +8,7 @@
 
   <% include ../partials/nav.ejs %>
 
-<div class="jumbotron text-center">
-  <div class="container">
-    <a href="#" class="metallica-image">
-
-
-    </a>
-    <h1>RockTC</h1>
-
-    <p>Rock!</p>
-    <a type="button" class="btn btn-lg btn-default" href="#"><span class="glyphicon glyphicon-flash"></span> Getting Started with Radio</a>
-    <a type="button" class="btn btn-lg btn-primary" href="#"><span class="glyphicon glyphicon-flash"></span> Source</a>
-  </div>
-</div>
-<div class="container">
-  <div class="alert alert-info text-center" role="alert">
-    To deploy your own app  <a href="#" class="alert-link">Getting Started RockTC</a> tutorial.
-  </div>
-  <section id="service">
-				<div class="container">
-					<div class="row">
-
-						<div class="sec-title text-center">
-							<h2 class="wow animated bounceInLeft">Rock</h2>
-							<p class="wow animated bounceInRight">Rock</p>
-						</div>
-
-						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn">
-							<div class="service-item">
-								<div class="service-icon">
-									<i class="fa fa-play-circle fa-4x"></i>
-								</div>
-								<h3>Radio1</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							</div>
-						</div>
-
-						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn" data-wow-delay="0.3s">
-							<div class="service-item">
-								<div class="service-icon">
-									<i class="fa fa-play-circle fa-4x"></i>
-								</div>
-								<h3>Radio2</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							</div>
-						</div>
-
-						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn" data-wow-delay="0.6s">
-							<div class="service-item">
-								<div class="service-icon">
-									<i class="fa fa-play-circle fa-4x"></i>
-								</div>
-								<h3>Radio3</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							</div>
-						</div>
-
-						<div class="col-md-3 col-sm-6 col-xs-12 text-center wow animated zoomIn" data-wow-delay="0.9s">
-							<div class="service-item">
-								<div class="service-icon">
-									<i class="fa fa-play-circle fa-4x"></i>
-								</div>
-
-								<h3>Radio4</h3>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. </p>
-							</div>
-						</div>
-
-					</div>
-				</div>
-			</section>
+  <% include ../partials/body.ejs %>
 			<!-- end Service section -->
   <hr>
 
@@ -86,7 +17,6 @@
      Footer
   </div>
 </div>
-
 
 </body>
 </html>
