--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,10 +5,10 @@
         <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
       </li>
       <li>
-        <a href="#"><span class="glyphicon glyphicon-user"></span>Radio1</a>
+        <a href="#"><span></span></a>
       </li>
       <li class="dropdown">
-        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Radio2 <span class="caret"></span></a>
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicons glyphicons-dog"></span><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#">Radio3</a></li>
             <li><a href="#">Radio4</a></li>
@@ -26,7 +26,7 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
-        <a href="#"><span class="glyphicon glyphicon-book"></span>Hello3</a>
+        <a href="#"><span class="glyphicon glyphicon-dog"></span></a>
       </li>
     </ul>
   </div>
